              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class AngleStructure:
            - The vector constructors are now templated, so that you can pass a
              vector of some type other than regina::Integer.
        Class AngleStructures:
            - New routine sort().
        Class BitManipulator<T>:
            - New routine swapBits().
        Class BoolSet:
            - New routine full().
            - Renamed empty() to clear(), without a deprecated alias, to avoid
              confusion with the more common pattern where empty() queries
              whether or not a container is empty.
        Enum ChangeType:
            - New enum for internal use with triangulation change spans.
        Class Example<3>:
            - Routines lst(), lens(), augTriSolidTorus() and sfsOverSphere()
              now check their preconditions and throw an exception if they fail.
            - Renamed cuspedGenusTwoTorus() to idealGenusTwoHandlebody().
              The old name has been kept as a deprecated alias.
        Class Face<dim, dim-1>:
            - New routines lock(), unlock(), and isLocked().
        Class FacetPairing<dim>:
            - New routine hash(), which uses the tight encoding.
        Class FacetSpec<dim>:
            - New routine hash(), which uses the tight encoding.
        Enum FileFormat:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., REGINA_XML_GEN_3) have been
              renamed as scoped enum values (e.g., FileFormat::XmlGen3).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class Flags<T>:
            - New operator bool(), which tests for a non-empty flag set.
        Class HomologicalData:
            - New routine triangulation().
        Class Integer: