@@ -35,8 +35,8 @@ formats; these abilities are indicated alongside the constants below.)doc";
 
 namespace FileFormat_ {
 
-// Docstring regina::python::doc::FileFormat_::REGINA_BINARY_GEN_1
-static const char *REGINA_BINARY_GEN_1 =
+// Docstring regina::python::doc::FileFormat_::BinaryGen1
+static const char *BinaryGen1 =
 R"doc(Indicates the old first-generation binary format used by Regina 2.4
 and earlier. This format was discontinued in mid-2002, when Regina
 adopted an XML-based format instead.
@@ -44,14 +44,14 @@ adopted an XML-based format instead.
 Regina no longer supports this (ancient) binary format at all: since
 version 4.94 in late 2013, Regina cannot read or write this format.)doc";
 
-// Docstring regina::python::doc::FileFormat_::REGINA_CURRENT_FILE_FORMAT
-static const char *REGINA_CURRENT_FILE_FORMAT =
+// Docstring regina::python::doc::FileFormat_::Current
+static const char *Current =
 R"doc(An alias for whichever file format is current. The numerical value of
 this constant may change in future releases of Regina, if/when new
 generational changes to the file format occur.)doc";
 
-// Docstring regina::python::doc::FileFormat_::REGINA_XML_GEN_2
-static const char *REGINA_XML_GEN_2 =
+// Docstring regina::python::doc::FileFormat_::XmlGen2
+static const char *XmlGen2 =
 R"doc(Indicates the second-generation file format used from Regina 3.0
 through to Regina 6.0.1 inclusive. This was the first file format
 based on XML. The root XML element is ``reginadata``.
@@ -59,8 +59,8 @@ based on XML. The root XML element is ``reginadata``.
 Regina can still transparently read second-generation data files, and
 can write them when explicitly asked.)doc";
 
-// Docstring regina::python::doc::FileFormat_::REGINA_XML_GEN_3
-static const char *REGINA_XML_GEN_3 =
+// Docstring regina::python::doc::FileFormat_::XmlGen3
+static const char *XmlGen3 =
 R"doc(Indicates the third-generation file format used from Regina 7.0
 onwards. This format is both more streamlined and more human-readable.
 The root XML element is ``regina``.
